# TransmittanceEffects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Skybox_1.sln
Models/Quad_Sphere/: only_quad_sphere.blend  only_quad_sphere.dae
Shaders/: shader.vert
Skybox_1/: Camera.h  Material.h  Shader.cpp  Shader.h  Skybox_1.vcxproj  Skybox_1.vcxproj.filters  Texture.h  Window.cpp  main.cpp
Skybox_1/Models/Quad_Sphere/: only_quad_sphere.mtl
Skybox_1/Shaders/: shader.frag  skybox.vert
Skybox_1/Upload/: Mesh.h  Model.cpp  Shader.cpp  Shader.h  Skybox.h  Window.cpp  Window.h  main.cpp
Skybox_1/Upload/Shaders/: shader.frag
glad/include/glad/: glad.h
glad/src/: glad.c
includes/: mesh.h
includes/glad/: glad.h
lib/: assimp.lib
lib/assimp/: assimp-vc140-mt.exp
src/: Camera.h  CommonValues.h  Material.h  Mesh.h  Model.h  Shader.h  Skybox.cpp  Skybox.h  Texture.h  Window.cpp  Window.h  main.cpp
